リスト初期化の項を追加

--- a/python3_cheetsheet.tex
+++ b/python3_cheetsheet.tex
@@ -47,6 +47,47 @@
 
 \section{制御構造}
 
+\subsection{リスト初期化}
+
+リスト内包表記でもできるし\texttt{*}で参照のコピーを作ってもいける \\*
+
+\texttt{*}使ったほうが速いらしいのでリスト内包表記よりも\texttt{*}使ったほうがいい
+
+\subsubsection{1次元配列}
+
+\begin{lstlisting}[language=Python]
+  # 10この0を持った1次元配列
+  >>> [0] * 10
+  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
+
+  >>> [0 for x in range(10)]
+  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
+\end{lstlisting}
+
+\subsubsection{2次元配列}
+
+\begin{lstlisting}[language=Python]
+  # 10この0を10こ持った2次元配列
+  >>> [[0] * 10 for x in range(10)]
+  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
+   [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
+   ...
+   [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]
+
+  # 2次元配列ならこれでも行けそうだけどダメ
+  >>> a = [[0] * 10] * 10
+  # 1つ要素を変更すると参照のコピーなので
+  # すべての要素に変更が加わる
+  >>> a[0][0] = 1
+  >>> a
+  [[1, 0, 0, 0, 0, 0, 0, 0, 0, 0],
+   [1, 0, 0, 0, 0, 0, 0, 0, 0, 0],
+   ...
+   [1, 0, 0, 0, 0, 0, 0, 0, 0, 0]]
+\end{lstlisting}
+
+\newpage
+
 \subsection{三項演算子}
 
 pythonでの三項演算子は
